minor refactor & single instance of date.